Closed Bug 77982 Opened 23 years ago Closed 23 years ago

A table cell containing an image may not show the cell's border and/or padding

Categories

(Core :: Layout: Tables, defect, P3)

x86
All
defect

Tracking

()

RESOLVED FIXED
mozilla0.9.6

People

(Reporter: karnaze, Assigned: karnaze)

References

()

Details

(Keywords: testcase, Whiteboard: PATCH CANDIDATE_094)

Attachments

(4 files, 1 obsolete file)

If a table cell contains an image and the cell's width and/or heigth is 
determined by the image, the cell's full border and padding will likely not be 
shown. For a 1 pixel border and 1 pixel paddding this will mean that the padding 
is not shown. Attachment #1 [details] [diff] shows a more severe example.
Attached file test case (obsolete) —
Moving to m0.9.1. The image must not be in the cache to see the bug. This bug 
was discovered after looking at the test case in bug 14929.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.1
Keywords: patch
Chris, I tried your patch. As a first step I downloaded the testcase to my local 
disc as the lxr gif access does not work and adjusted the image src path. Then I 
started the viewer and as the table is larger then 600px I hit the maximise 
button and could eyewitness the next reflow bug. You should fix this as well 
within this patch :-).
Moving m0.9.3
Target Milestone: mozilla0.9.1 → mozilla0.9.3
Missed 0.9.3.
Target Milestone: mozilla0.9.3 → mozilla0.9.4
I can reproduce this on Linux, so marking OS->All

To Reproduce, using Mozilla on Linux, go to: 
http://gbreland.one-arm.com/mozilla/jump.html

Page will appear correctly.  Now click on <reload> and the problem will show
itself.  I used style="border-width:15px;" to make the problem obvious.
OS: Windows NT → All
Target Milestone: mozilla0.9.4 → mozilla0.9.5
Attachment #32479 - Attachment is obsolete: true
Keywords: testcase
reassigning to m0.9.6
Target Milestone: mozilla0.9.5 → mozilla0.9.6
Keywords: patch
Whiteboard: PATCH
Actually, you need to do a <shift><reload> with my example at:

  http://gbreland.one-arm.com/mozilla/jump.html

This is a big problem as can be seen with my other site.  Notice how the logo
bounes up and down when <reload> and <shift><reload>

  http://www.mozillanews.org/
Comment on attachment 32485 [details] [diff] [review]
patch to fix the bug

sr=attinasi, r=alexsavulov
Attachment #32485 - Flags: superreview+
Attachment #32485 - Flags: review+
Bernd, I can't reproduce the problem you were having. I first tried 
putting the image locally and then changed the test case to access the image 
from mozilla.org to get more of a time delay.
Priority: -- → P3
The patch is in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: PATCH → PATCH CANDIDATE_094
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: